--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -13,8 +13,8 @@
     </header>
     <nav>
         <ul>
-            <li><a>https://www.chess.com/home</a></li>
-            <li><a>https://www.uniqlo.com/ca/en/</a></li>
+            <li><a href="//www.chess.com/home">Chess</a></li>
+            <li><a href="https://www.uniqlo.com/ca/en/">Uniqlo Store</a></li>
         </ul>
     </nav>
     <main>
