--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Box Model</title>
     <link rel="stylesheet" href="week02\styles\box-model.css">
 </head>
 <body>
@@ -16,7 +16,6 @@
                 <p>13 I can do all things through Christ which strengtheneth me.</p>
             </blockquote>
             <cite>Philippians 4:11-13</cite>
-            <p></p>
         </div>
     </main>
 </body>
