--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="This is a website that I am making for a a course I am taking called WDD130. My name is Paolo Gonzales. I am the creator of this site">
+    <meta name="author" content="Paolo Gonzales">
     <title>Paolo Gonzales | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
@@ -19,6 +21,11 @@
         <img src="images/profile.jpg" alt="Hi my name is Paolo Gonzales" width="200">
         <p> Hello! My name is Paolo Gonzales. I am from Calgary, Alberta in Canada. The photo on this site is of me at Lake Morraine in Banff Alberta. Its an amazing lake that has beautiful blue water as a result of sediment runoff from the surrrounding mountains. I love hiking and rock climbing! I will often spend much of my time with my family exploring the rocky mountains. </p>
     </main>
+    <aside>
+      <h2> Alberta,Canada</h2>
+      <img src="images/mountain.jpeg" alt="Image of the mountains in Banff, Alberta">
+      <p> Alberta is a consists of mostly plains and mountains. It contains part of the Rocky Mountain Range and has many tourist destinations within.</p>
+    </aside>
     <footer>
         <p>©️2023 Paolo Gonzales Alberta, Canada</p>
     </footer>
