--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
     <aside>
       <h2> Alberta,Canada</h2>
-      <img src="images/mountain.jpeg" alt="Image of the mountains in Banff, Alberta">
+      <img src="images/mountainm.jpeg" alt="Image of the mountains in Banff, Alberta">
       <p> Alberta is a consists of mostly plains and mountains. It contains part of the Rocky Mountain Range and has many tourist destinations within.</p>
     </aside>
     <footer>
