--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -37,6 +37,7 @@
             Palette URL: <a href="https://coolors.co/e3e7af-a2a77f-eff1c5-035e7b-002e2c" target="_blank">https://coolors.co/e3e7af-a2a77f-eff1c5-035e7b-002e2c</a>
         </p>
         <h3>Typography</h3>
+        <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
         <p>Roboto Sans serif/Nunito sans serif</p>
         <h4>Colored Callout Example Font</h4>
