--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -26,7 +26,7 @@
         <h3> Website Logo</h3>
         <img src="images/logo.png" alt="Rafting Site logo">
 
-        <h2>\Style Guide</h2>
+        <h2>Style Guide</h2>
 
         <h3>Color Palette</h3>
         <p> 
