--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <meta name="description" content="The purpose,target audience, branding info, and a style guide">
+    <meta name="author" content="Paolo Gonzales">
     <title>Document</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
