title fix and removal of px

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,13 +6,12 @@
     <title>About Us</title>
     <meta name="description" content="The purpose,target audience, branding info, and a style guide">
     <meta name="author" content="Paolo Gonzales">
-    <title>Document</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
         <nav>
-            <img src="images/logo.png" alt=" Rafting Logo" width="200px">
+            <img src="images/logo.png" alt=" Rafting Logo" width="200">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
