--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="wwr/">White Water Rafting</a>
+            <a href="wwr/site-plan-rafting.html">Siteplan</a>
             <a href="https://www.linkedin.com/in/paolo-gonz/">Linkedin</a>
             <a href="https://www.facebook.com/Apollol3/"> Facebook</a>
         </nav>
     </header>
-    <main>
+    <div class="grid">
+      <main>
         <h1>Paolo Gonzales | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hi my name is Paolo Gonzales" width="200">
-        <p> Hello! My name is Paolo Gonzales. I am from Calgary, Alberta in Canada. The photo on this site is of me at Lake Morraine in Banff Alberta. Its an amazing lake that has beautiful blue water as a result of sediment runoff from the surrrounding mountains. I love hiking and rock climbing! I will often spend much of my time with my family exploring the rocky mountains. <br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime similique nesciunt voluptate ullam tempora unde, quis alias recusandae nostrum aliquid nam quod odio laborum libero repellat, dignissimos excepturi ut adipisci? </p>
+        <p> Hello! My name is Paolo Gonzales. I am from Calgary, Alberta in Canada. The photo on this site is of me at Lake Morraine in Banff, Alberta. Its an amazing lake that has beautiful blue water as a result of sediment runoff from the surrrounding mountains. I love hiking and rock climbing! I will often spend much of my time with my family exploring the rocky mountains. <br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime similique nesciunt voluptate ullam tempora unde, quis alias recusandae nostrum aliquid nam quod odio laborum libero repellat, dignissimos excepturi ut adipisci? </p>
         <ul class="box">
           <li><a href="https://www.churchofjesuschrist.org/temples/details/calgary-alberta-temple?lang=eng" target="_blank">Calgary, Alberta Temple</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/toronto-ontario-temple?lang=eng" target="_blank">Toronto, Ontario Temple</a></li>
           <li><a href="https://www.churchofjesuschrist.org/temples/details/manila-philippines-temple?lang=eng" target="_blank">Quezon City, Metro Manila, Philippines</a></li>
         </ul>
       </main>
-    <aside class="box">
-      <h2> Alberta,Canada</h2>
-      <img src="images/mountainm.jpeg" alt="Image of the mountains in Banff, Alberta">
-      <p> Alberta consists of mostly plains and mountains. It contains part of the Rocky Mountain Range and has many tourist destinations within.</p>
-    </aside>
+      <aside class="box">
+        <h2> Alberta,Canada</h2>
+        <img src="images/mountainm.jpeg" alt="Image of the mountains in Banff, Alberta">
+        <p> Alberta consists of mostly plains and mountains. It contains part of the Rocky Mountain Range and has many tourist destinations within.</p>
+      </aside>
+    </div>
     <footer>
         <p>©️2023 Paolo Gonzales Alberta, Canada</p>
     </footer>
