--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,45 +18,47 @@
             <a href="contact.html">Contact Us</a>
         </nav>
     </header>
-    <main>
-        <div class="hero">
-            <h1>Mountain Name Rafting</h1>
-            <img src="images/river-wide2hero.jpg" alt="big river">
-            <article class="banner">
-                <img src="images/happyclient.png" alt="Happy Client" width="200">
-                    <p>Explore the rivers of the Rockies! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores, alias.</p>
-            </article>
-        </div>
-        <section class="history">
-            <h2>History</h2>
-            <p>Serving adventurers and families for literally 2 days. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dicta ut, reiciendis expedita, cupiditate quidem labore architecto temporibus inventore vero doloribus nulla asperiores eveniet possimus numquam saepe? Sit quidem illo corporis aliquid totam commodi nostrum, ut, maiores harum, voluptatum animi illum cupiditate nihil laborum voluptas facere nam ea dolorem sed eos nesciunt officiis aut qui. Quos culpa molestias voluptatem laboriosam quaerat repellat consequatur veritatis porro, velit maiores. Nisi aspernatur soluta sequi sint accusamus sapiente, asperiores, magnam blanditiis explicabo laudantium minima. Repudiandae, alias! Modi beatae facere suscipit placeat molestias, libero corporis incidunt hic, eum dolorum commodi neque pariatur cupiditate molestiae. Veritatis?</p>
-        </section>
-        <section>
-            <h2>Adventure Awaits You!</h2>
-            <div class="grid">
-                <figure>
-                    <img src="images/rafting1close.jpg" alt="White Water Rafting close up" >
-                    <figcaption>El loco</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting2far.jpg" alt="White Water Rafting Far Away">
-                    <figcaption>Ezra</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting3veryfar.jpg" alt="White Water Rafting very far away" >
-                    <figcaption>Zendikar</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/rafting4teamwork.jpg" alt="Teamwork of lifting a raft">
-                    <figcaption>Innistrad</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/helmets.jpg" alt="Helmets on a raft" >
-                    <figcaption>Helmets on a raft</figcaption>
-                </figure>
+    <div class="maingrid">
+        <main>
+            <div class="hero">
+                <h1>Mountain Name Rafting</h1>
+                <img src="images/river-wide2hero.jpg" alt="big river">
+                <article class="banner">
+                    <img src="images/happyclient.png" alt="Happy Client" width="200">
+                        <p>Explore the rivers of the Rockies! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores, alias.</p>
+                </article>
             </div>
-        </section>
-    </main>
+            <section class="history">
+                <h2>History</h2>
+                <p>Serving adventurers and families for literally 2 days. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dicta ut, reiciendis expedita, cupiditate quidem labore architecto temporibus inventore vero doloribus nulla asperiores eveniet possimus numquam saepe? Sit quidem illo corporis aliquid totam commodi nostrum, ut, maiores harum, voluptatum animi illum cupiditate nihil laborum voluptas facere nam ea dolorem sed eos nesciunt officiis aut qui. Quos culpa molestias voluptatem laboriosam quaerat repellat consequatur veritatis porro, velit maiores. Nisi aspernatur soluta sequi sint accusamus sapiente, asperiores, magnam blanditiis explicabo laudantium minima. Repudiandae, alias! Modi beatae facere suscipit placeat molestias, libero corporis incidunt hic, eum dolorum commodi neque pariatur cupiditate molestiae. Veritatis?</p>
+            </section>
+            <section>
+                <h2>Adventure Awaits You!</h2>
+                <div class="grid">
+                    <figure>
+                        <img src="images/rafting1close.jpg" alt="White Water Rafting close up" >
+                        <figcaption>El loco</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting2far.jpg" alt="White Water Rafting Far Away">
+                        <figcaption>Ezra</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting3veryfar.jpg" alt="White Water Rafting very far away" >
+                        <figcaption>Zendikar</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting4teamwork.jpg" alt="Teamwork of lifting a raft">
+                        <figcaption>Innistrad</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/helmets.jpg" alt="Helmets on a raft" >
+                        <figcaption>Helmets on a raft</figcaption>
+                    </figure>
+                </div>
+            </section>
+        </main>
+    </div>
     <footer>
         <p>©️2023 Rafting Site | Mountain Name Rafting | Paolo Gonzales </p>
         <section class="icons">
