--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
       </main>
       <aside class="box">
-        <h2> Alberta,Canada</h2>
+        <h2> Banff</h2>
         <img src="images/mountainm.jpeg" alt="Image of the mountains in Banff, Alberta">
         <p> Alberta consists of mostly plains and mountains. It contains part of the Rocky Mountain Range and has many tourist destinations within.</p>
       </aside>
