--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
                 <legend>Questions</legend>
                 <div class="form-item">
                     <label for q2>1. What does the acronym CSS stand for? </label>
-                    <input type="q1" name="q1">
+                    <input type="text" name="q1">
                 </div>
                 <div class="form-item">
                     <label for="q2">2. How are id and class attributes selected in CSS?</label>
