--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a quizmade for a course called WDD130.">
+    <meta name="author" content="Paolo Gonzales">
     <title>WDD 130 | HTML/CSS Quiz </title>
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
