--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
             <fieldset>
                 <legend>Questions</legend>
                 <div class="form-item">
-                    <label for q2>1. What does the acronym CSS stand for? </label>
+                    <label for="q1">1. What does the acronym CSS stand for? </label>
                     <input type="text" name="q1">
                 </div>
                 <div class="form-item">
