--- a/quiz.html
+++ b/quiz.html
@@ -16,15 +16,15 @@
         <form>
             <fieldset>
                 <legend>Questions</legend>
-                <div class="form-item">
+                <div>
                     <label for="q1">1. What does the acronym CSS stand for? </label>
                     <input type="text" name="q1">
                 </div>
-                <div class="form-item">
+                <div>
                     <label for="q2">2. How are id and class attributes selected in CSS?</label>
-                    <textarea id="q2" name ="q2" rows="4"></textarea>
+                    <textarea id="q2" name="q2" rows="4"></textarea>
                 </div>
-                <div class="form-item">
+                <div>
                     <label for="q3">3. Which of the following is a valid CSS comment?</label>
                     <select id="q3" name="q3">
                         <option value="" selected disabled>Choose one ...</option>
@@ -33,11 +33,10 @@
                         <option value="q3a3">/* comment */</option>
                     </select>
                 </div>
-                <div class="form-item">
+                <div>
                     <label for="q4">4. What is the bottom margin given in this declaration?</label>
                     <input type="number" id="q4" name="q4">
                 </div>
-                
             </fieldset>
             <button type="submit">Submit Quiz</button>
         </form>
