--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -42,7 +42,7 @@
                     <label for="pet">Do you have a pet?</label>
                     <input type="checkbox" id="pet" name="pet">
                 </div>
-                <div class="form-item">
+                <div>
                     <label for="feedback">List the places you have lived?</label>
                     <textarea id="feedback" name  ="feedback" rows="4" placeholder="Australia, Bangladesh, Canada, Denmark"></textarea>
                 </div>
