--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -20,10 +20,6 @@
                 <div class="form-item column2">
                     <label>Email: <input type="text" name="useremail"></label>
                 </div>
-                <!-- <label for="fullname">Full Name:>
-                <input type="text" id="fullname" name="fullname">
-                <label for="email">Email</label>
-                <input type="text" id="useremail" name="useremail"> -->
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
@@ -37,14 +33,11 @@
                         <option value="brave">Brave</option>
                         <option value="Other">Other</option>
                     </select>
-                </div>
-                <div class="form-item column1">
                     <label for="pet">Do you have a pet?</label>
                     <input type="checkbox" id="pet" name="pet">
-                </div>
-                <div>
-                    <label for="feedback">List the places you have lived?</label>
-                    <textarea id="feedback" name  ="feedback" rows="4" placeholder="Australia, Bangladesh, Canada, Denmark"></textarea>
+                
+                    <label for="feedback"></label>
+                    <textarea id="feedback" name  ="feedback" rows="4"></textarea>
                 </div>
             </fieldset>
             <button type="submit">Submit Poll</button>
