--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <meta name="description" content="Contact page for White Water Rafting Site(Mountain Name Rafting)">
+    <title>Contact Us, Mountain Name Rafting</title>
+    <meta name="description" content="Contact us! Webpaage for White Water Rafting Site(Mountain Name Rafting)">
     <meta name="author" content="Paolo Gonzales">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -69,17 +69,16 @@
                     </fieldset>
                     <fieldset>
                         <legend>Have a question?</legend>
-                        <legend>Purpose of your message</legend>
                         <div class="rad">
-                            <input type="radio" id="GI" name="GI" value="GI" unchecked />
+                            <input type="radio" id="GI" name="GI" value="GI"/>
                             <label for="GI">General Inquiry</label>
                         </div>   
                         <div class="rad">
-                            <input type="radio" id="RQ" name="RQ" value="RQ" unchecked />
+                            <input type="radio" id="RQ" name="RQ" value="RQ"/>
                             <label for="RQ">Reservation Question</label>  
                         </div> 
                         <div class="rad">
-                            <input type="radio" id="WS" name="WS" value="WS" unchecked />
+                            <input type="radio" id="WS" name="WS" value="WS"/>
                             <label for="WS">Website Suggestion</label> 
                         </div>
                         <div class="form-item">
