--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <meta name="description" content="The purpose,target audience, branding info, and a style guide">
+    <meta name="About Us, Mountain Name Rafting" content="Learn all about our mission, our employees, and our history.">
     <meta name="author" content="Paolo Gonzales">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -46,14 +46,6 @@
                     <figure>
                         <img src="images/rafting3veryfar.jpg" alt="White Water Rafting very far away" >
                         <figcaption>Zendikar</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/rafting4teamwork.jpg" alt="Teamwork of lifting a raft">
-                        <figcaption>Innistrad</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/helmets.jpg" alt="Helmets on a raft" >
-                        <figcaption>Helmets on a raft</figcaption>
                     </figure>
                 </div>
             </section>
