--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -57,8 +57,8 @@
                 </div>
             </section>
             <section>
-                <form>
-                    <fieldset>
+                <form class="form-contact">
+                    <fieldset class="fieldset-contact">
                         <legend>Contact Information</legend>
                         <div class="form-item column1" >
                             <label>Full Name: <input type="text" name="fullname"></label>
@@ -67,7 +67,7 @@
                             <label>Email: <input type="text" name="useremail"></label>
                         </div>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="fieldset-contact">
                         <legend>Have a question?</legend>
                         <div class="rad">
                             <input type="radio" id="GI" name="GI" value="GI"/>
