--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Home</title>
     <meta name="Home, Mountain Name Rafting" content="Welcome to Mountain Name Rafting! learn more about us, contact us or learn about the trips we offer..">
     <meta name="author" content="Paolo Gonzales">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -47,14 +47,42 @@
                 </div>
                     <img src="images/helmets.jpg" alt="picture of helmets" width="420px" >
             </section>
-            <section>
-                <h2>Sign Up To Our Newsletter</h2>
-                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.  </p>
+           
+            <section class="split">
+                <div class="sub1">
+                    <h2>Rocky Mountain Rivers</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, optio.</p>
+                    <img src="images/rafting4teamwork.jpg" alt="" width=300>
+                </div>
+                <div class="sub2">
+                    <img src="images/rafting1close.jpg"alt="" width=300>
+                    <h2>Great Fun for Everyone</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum perferendis cum iste autem voluptatibus impedit.</p>  
+                </div>
+            </section>
+            <section class="newsletter">
+                <form>
+                    <fieldset class="fieldset-newsletter">
+                        <h2>Sign Up To Our Newsletter!</h2>
+                        <p>Nam libero tempore, cuma soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.  </p>
+                        <div class="index-grid-newsletter">
+                            <div class="nameemail" >
+                                <label>Full Name: <input type="text" name="fullname"></label>
+                            </div>
+                            <div class="nameemail">
+                                <label>Email: <input type="text" name="useremail"></label>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
             </section>
         </main>
     </div>
     <footer>
         <p>©️2023 Rafting Site | Mountain Name Rafting | Paolo Gonzales </p>
+        <a href="images/Screenshot 2023-10-23 190041.png" alt="wireframe link">
+            <h5>index page wireframe image</h5>
+            </a>
         <section class="icons">
             <a href="https://www.facebook.com/">
                 <img src="images/Facebook_colored_svg.webp" alt="Facebook">
