--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Trips</title>
     <meta name="Mountain Name Company Trips" content="Book your next white water rafting adventure with Mountain Name Company.">
     <meta name="author" content="Paolo Gonzales">
     <link rel="stylesheet" href="styles/rafting.css">
