--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,13 +39,13 @@
                     </a>
                 </div>
                 <div class="but2">
-                    <a style="text-decoration:none" href="about.html" alt="about us page link">
+                    <a style="text-decoration:none" href="about.html">
                         <div class="tripsbutton">
                             <button>Learn More</button>
                         </div>
                     </a>
                 </div>
-                    <img src="images/helmets.jpg" alt="picture of helmets" width="420px" >
+                    <img src="images/helmets.jpg" alt="picture of helmets" width="420" >
             </section>
            
             <section class="split">
@@ -80,7 +80,7 @@
     </div>
     <footer>
         <p>©️2023 Rafting Site | Mountain Name Rafting | Paolo Gonzales </p>
-        <a href="images/Screenshot 2023-10-23 190041.png" alt="wireframe link">
+        <a href="images/indexwireframe.png">
             <h5>index page wireframe image</h5>
             </a>
         <section class="icons">
