--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -90,7 +90,7 @@
     </div>
     <footer>
         <p>©️2023 Rafting Site | Mountain Name Rafting | Paolo Gonzales </p>
-        <a href="images/Screenshot 2023-10-18 213714.png" alt="wireframe link">
+        <a href="images/tripswiref.png">
             <h5>Trips page wireframe image</h5>
             </a>
         <section class="icons">
