--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,34 +32,30 @@
                 <h2>Come Raft with Us!</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore deserunt. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga, nobis?</p>
                 <div class="but1">
-                    <a style="text-decoration:none" href="trips.html" alt="trips page link">
-                    <div class="tripsbutton">
-                        <button>Get Rafting</button>
-                    </div>
-                    </a>
+                    <form action="trips.html" class="tripsbutton">
+                        <button type="submit">Get Rafting</button>
+                      </form>
                 </div>
                 <div class="but2">
-                    <a style="text-decoration:none" href="about.html">
-                    <div class="tripsbutton">
-                        <button>Learn More</button>
-                    </div>
-                    </a>
+                    <form action="about.html" class="tripsbutton">
+                        <button type="submit">Learn More</button>
+                      </form>
                 </div>
                     <img src="images/helmets.jpg" alt="picture of helmets" width="420" >
             </section>
            
-            <section class="split">
+            <div class="split">
                 <div class="sub1">
                     <h2>Rocky Mountain Rivers</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, optio.</p>
                     <img src="images/rafting4teamwork.jpg" alt="" width=300>
                 </div>
                 <div class="sub2">
-                    <img src="images/rafting1close.jpg"alt="" width=300>
+                    <img src="images/rafting1close.jpg" alt="" width=300>
                     <h2>Great Fun for Everyone</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum perferendis cum iste autem voluptatibus impedit.</p>  
                 </div>
-            </section>
+            </div>
             <section class="newsletter">
                 <form>
                     <fieldset class="fieldset-newsletter">
@@ -83,7 +79,7 @@
         <a href="images/indexwireframe.png">
             <h5>index page wireframe image</h5>
             </a>
-        <section class="icons">
+        <div class="icons">
             <a href="https://www.facebook.com/">
                 <img src="images/Facebook_colored_svg.webp" alt="Facebook">
             </a>
@@ -93,7 +89,7 @@
             <a href="https://twitter.com/">
                 <img src="images/1_Twitter3_colored_svg-64.webp" alt="X">
             </a>
-    </section>
+        </div>
     </footer>
 </body>
 </html>
