--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -72,11 +72,9 @@
             </section>
             <section class="history">
                 <h2>Have Questions?</h2>
-                    <a style="text-decoration:none" href="contact.html" alt="Contact us link">
-                        <div class="contactbutton">
-                            <button>Contact Us</button>
-                        </div>
-                    </a>
+                    <form action="contact.html" class="tripsbutton">
+                        <button type="submit">Contact Us</button>
+                    </form>
             </section>
             <section>
                 <h2>Company Information</h2>
